<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_num_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="num 1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/second_num_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="num 2"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="OK"
        android:textSize="30sp" />
</LinearLayout>